--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,48 @@
+* {
+  box-sizing: border-box;
+  overflow: auto;
+}
+
+html, body, #root, .App {
+  height: 100%;
+}
+
 .App {
   text-align: center;
+  background-attachment: fixed;
+  background-color: rgb(54, 77, 153);
+}
+
+header {
+  height: 25%;
+  padding: 26% 0 0 7%;
+}
+
+header h1 {
+  text-align: start;
+  margin: 0;
+}
+
+.view-selection-section {
+  height: 4%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.view-selection-btn {
+  height: 100%;
+  width: 43%;
+  font-size: 18px;
+  color: white;
+  background: none;
+  border: none;
+  border-bottom: 5px solid black;
+  font-weight: bold;
 }
 
 ul {
   list-style: none;
-}
-
-.to-get-section {
-  border-top: 1px solid black;
 }
 
 .section {
@@ -18,20 +53,24 @@ ul {
   padding: 0;
 }
 
-.to-get-grocery, .already-have-grocery {
-  width: 100%;
+.grocery {
+  width: 85%;
+  height: 40px;
   display: flex;
+  margin: 10px auto;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  background-color: white;
 }
 
 .to-get-grocery-name, .already-have-grocery-name {
-  margin-left: 50px;
+  height: auto;
+  margin: 0 0 0 50px;
 }
 
 .switch-to-already-have-btn, .ran-out-btn {
-  height: 30%;
+  height: 60%;
   margin-right: 50px;
   right: 0;
 }
