--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ header h1 {
   font-weight: bold;
 }
 
-.add-to-get-section {
+.add-to-get-section, .add-already-have-section {
   display: flex;
 }
 
